fixed alignment of links to categories on main page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -63,9 +63,10 @@ body {
 }
 
 .cat-link {
-text-align: right;
+text-align: left;
 color: white;
 padding-bottom: 0px;
+
 }
 
 .brand {
